--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --oui-font-family: 'Roboto', sans-serif;
+  --oui-font-family: 'Ubuntu', sans-serif;
   --oui-font-size-base: 15px;
 
   /* colors */
@@ -53,8 +53,8 @@
   --oui-color-trading-profit-contrast: 0 0 0;
 
   /* gradients */
-  --oui-gradient-primary-start: 40 0 97;
-  --oui-gradient-primary-end: 189 107 237;
+  --oui-gradient-primary-start: 0 0 0;
+  --oui-gradient-primary-end: 0 0 0;
 
   --oui-gradient-secondary-start: 81 42 121;
   --oui-gradient-secondary-end: 176 132 233;
@@ -94,18 +94,20 @@
   --oui-spacing-xl: 33.75rem;
 }
 
-.oui-items-center {
-text-transform:uppercase;
-font-size:11px;
-letter-spacing:0.8px
+html, body {
+  font-family: 'Ubuntu', sans-serif !important;
+  font-size: 15px !important;
+text-transform:uppercase !important;
 }
+
+.orderly-app-container,
+.orderly-app-container *,
+.orderly-app-container *::before,
+.orderly-app-container *::after {
+  font-family: 'Ubuntu', sans-serif !important;
+}
+
 
 .oui-scaffold-footer-powered-by {
 display:none !important;
-}
-
-html, body {
-  font-family: 'Roboto', sans-serif !important;
-  font-size: 15px !important;
-text-transform:uppercase;
 }
